# yolo-bench

./: .gitignore  Justfile  README.md  pyproject.toml
src/benchmark_common/: __init__.py  compare_models.py  config.py  metrics.py  paths.py  runtime.py
src/dataset-augment/: augment_with_targets.py
src/dataset-fetcher/: fetch_coco128.py
src/finetune-rtdetr/: bench.py  eval.py  infer.py  setup.py  train.py
src/finetune-yolo11/: bench.py  eval.py  infer.py  setup.py  train.py  wandb.py
src/finetune-yolo26/: bench.py  eval.py  infer.py  setup.py  train.py
src/finetune-yolo7/: bench.py  eval.py  infer.py  setup.py  train.py  wandb.py
src/targets-labels/: label_targets.py
