[project]
name = "yolo-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "onnx>=1.19.1",
    "onnxruntime-gpu>=1.19.2,<1.20",
    "onnxslim>=0.1.86",
    "pillow>=11.3.0",
    "pyqt6>=6.9.1",
    "tensorrt>=10.15.1.29",
    "torch>=2.8.0",
    "ultralytics>=8.4.19",
    "wandb>=0.21.0",
]
